--- a/labs1/TASK17.ipynb
+++ b/labs1/TASK17.ipynb
@@ -4,7 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "shefhshjhghsf"
+    "PYTHON Concatenate Strings topic 17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HelloWorld\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Example\n",
+    "\n",
+    "a = \"Hello\"\n",
+    "b = \"World\"\n",
+    "c = a + b\n",
+    "print(c)"
    ]
   },
   {
@@ -16,14 +38,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.13.2 (tags/v3.13.2:4f8bb39, Feb  4 2025, 15:23:48) [MSC v.1942 64 bit (AMD64)]\n"
+      "Hello World\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
+    "#Example\n",
     "\n",
-    "print(sys.version)"
+    "a = \"Hello\"\n",
+    "b = \"World\"\n",
+    "c = a + \" \" + b\n",
+    "print(c)"
    ]
   }
  ],
